--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.13",
     "@material-ui/styles": "^4.0.0",
     "@material/ripple": "^4.0.0",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "install": "^0.12.2",
     "mathjs": "^11.5.1",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "latest",
+    "react-dom": "latest",
     "react-gsap": "^3.2.1",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.1.0",
@@ -22,8 +26,13 @@
     "react-scripts": "^5.0.1",
     "react-with-firebase-auth": "^1.0.3",
     "recompose": "^0.17.0",
+    "survey-core": "^1.9.75",
+    "survey-react-ui": "^1.9.75",
     "typeface-roboto": "^0.0.54",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "react-scripts": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
