--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "node-react-app",
   "version": "1.0.0",
@@ -14,6 +13,7 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.20",
     "recompose": "^0.17.0",
+    "survey-core": "^1.9.75",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
