--- a/client/package.json
+++ b/client/package.json
@@ -13,31 +13,37 @@
     "@material/ripple": "^4.0.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@testing-library/jest-dom": "^5.16.5",
+    "angular": "^1.8.3",
     "install": "^0.12.2",
+    "jest-dom": "^4.0.0",
+    "jsx-runtime": "^1.2.0",
     "mathjs": "^11.5.1",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-gsap": "^3.2.1",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
+    "react-test-renderer": "^16.8.6",
+    "react-testing-library": "^8.0.1",
     "react-with-firebase-auth": "^1.0.3",
     "recompose": "^0.17.0",
     "survey-core": "^1.9.75",
     "survey-react-ui": "^1.9.75",
+    "testing-library": "^0.0.2",
     "typeface-roboto": "^0.0.54",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "react-scripts": "latest"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "cypress": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,5 +60,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "core-js": "^3.29.0",
+    "cypress": "^10.9.0",
+    "jest": "^29.4.3",
+    "jsdom": "21.1.0",
+    "jsdom-global": "3.0.2",
+    "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5"
   }
 }
