--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@mui-treasury/layout": "^5.0.0",
     "@mui-treasury/mockup": "^1.2.12",
     "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.10",
+    "@mui/joy": "^5.0.0-alpha.72",
+    "@mui/material": "^5.11.14",
+    "@mui/x-data-grid": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "angular": "^1.8.3",
     "install": "^0.12.2",
