--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "dependencies": {
     "@mui/joy": "^5.0.0-alpha.72",
     "@mui/x-data-grid": "^6.0.2",
+    "@mui/x-date-pickers-pro": "^6.0.2",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.20",
+    "react-use-effect": "^0.0.1",
     "recompose": "^0.17.0",
     "survey-core": "^1.9.75",
+    "usestate": "^1.1.3",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
