--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^4.0.3",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.3",
+    "@devexpress/dx-react-core": "^4.0.3",
+    "@devexpress/dx-react-grid": "^4.0.3",
+    "@devexpress/dx-react-grid-material-ui": "^4.0.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
@@ -19,14 +24,24 @@
     "@mui/x-data-grid": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "angular": "^1.8.3",
+    "canvasjs": "^1.8.3",
+    "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^4.2.1",
+    "csv-parser": "^3.0.0",
+    "d3": "^7.8.2",
+    "fs": "^0.0.1-security",
+    "fusioncharts": "^3.20.0",
     "install": "^0.12.2",
     "jest-dom": "^4.0.0",
     "jsx-runtime": "^1.2.0",
     "mathjs": "^11.5.1",
     "node-fetch": "^2.6.1",
+    "papaparse": "^5.4.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-fusioncharts": "^4.0.0",
     "react-gsap": "^3.2.1",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.1.0",
@@ -43,6 +58,7 @@
     "testing-library": "^0.0.2",
     "typeface-roboto": "^0.0.54",
     "uuid": "^8.3.2",
+    "vue-fusioncharts": "^3.2.0",
     "yarn": "^1.22.19"
   },
   "scripts": {
