--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dayjs": "^1.11.7",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "firebase": "^9.18.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.20",
+    "react-router-dom": "^6.9.0",
     "react-use-effect": "^0.0.1",
     "recompose": "^0.17.0",
     "survey-core": "^1.9.75",
