--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "@mui-treasury/mockup": "^1.2.12",
     "@mui/icons-material": "^5.11.9",
     "@mui/joy": "^5.0.0-alpha.72",
+    "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.14",
     "@mui/x-data-grid": "^6.0.2",
+    "@mui/x-date-pickers-pro": "^6.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "angular": "^1.8.3",
     "canvasjs": "^1.8.3",
@@ -29,6 +31,8 @@
     "chart.js": "^4.2.1",
     "csv-parser": "^3.0.0",
     "d3": "^7.8.2",
+    "date-fns": "^2.29.3",
+    "firebase": "^9.18.0",
     "fs": "^0.0.1-security",
     "fusioncharts": "^3.20.0",
     "install": "^0.12.2",
