--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@devexpress/dx-chart-core": "^4.0.3",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.3",
+    "@devexpress/dx-react-core": "^4.0.3",
     "@mui/joy": "^5.0.0-alpha.72",
     "@mui/x-data-grid": "^6.0.2",
     "@mui/x-date-pickers-pro": "^6.0.2",
+    "blockswords-lightweight-charts": "^3.8.0-blockswords-6",
     "dayjs": "^1.11.7",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
@@ -20,6 +24,7 @@
     "react-router-dom": "^6.9.0",
     "react-use-effect": "^0.0.1",
     "recompose": "^0.17.0",
+    "source-map-loader": "^4.0.1",
     "survey-core": "^1.9.75",
     "usestate": "^1.1.3",
     "yarn": "^1.22.18"
