--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-core": "^4.0.3",
     "@devexpress/dx-react-chart": "^4.0.3",
     "@devexpress/dx-react-chart-material-ui": "^4.0.3",
     "@devexpress/dx-react-core": "^4.0.3",
@@ -33,6 +34,7 @@
     "csv-parser": "^3.0.0",
     "d3": "^7.8.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "firebase": "^9.18.0",
     "fs": "^0.0.1-security",
     "fusioncharts": "^3.20.0",
