--- a/client/package.json
+++ b/client/package.json
@@ -43,16 +43,13 @@
     "node-fetch": "^2.6.1",
     "papaparse": "^5.4.1",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
     "react-fusioncharts": "^4.0.0",
     "react-gsap": "^3.2.1",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
-    "react-test-renderer": "^16.8.6",
     "react-testing-library": "^8.0.1",
     "react-with-firebase-auth": "^1.0.3",
     "recompose": "^0.17.0",
@@ -86,16 +83,16 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.4.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^12.1.2",
+    "babel-jest": "^24.9.0",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "core-js": "^3.29.0",
-    "cypress": "^10.9.0",
-    "jest": "^29.4.3",
-    "jsdom": "21.1.0",
-    "jsdom-global": "3.0.2",
-    "prettier": "^2.8.4",
+    "cypress": "^12.8.1",
+    "jest": "^24.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^16.8.6",
     "ts-jest": "^29.0.5"
   }
 }
