testing adn styling

--- a/client/package.json
+++ b/client/package.json
@@ -88,7 +88,7 @@
     "@testing-library/react": "^12.1.2",
     "babel-jest": "^24.9.0",
     "babel-preset-stage-0": "^6.24.1",
-    "cypress": "^12.8.1",
+    "cypress": "10.9.0",
     "jest": "^24.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
